# python-bootcamp

./: .gitignore  activities.py  assertion.py  copygame.py  deckofcards.py  decorators.py  dictionary.py  functions.py  generator.py  grumpy.py  hello.py  inheritance.py  iterator.py  list.py  mileage.py  pyproject.toml  rockpaperscissor.py  specialmethods.py  story.txt  tests.py  tuplesandsets.py
csv/: csvfiles.py  new_csvdata.csv
datastructures/: collections_defaultdict.py  collections_deque.py  collections_ordereddict.py  dict_comprehension.py  dicts.py  heap.py  sets.py  tuples.py  unpacking.py
fileio/: files.py
functions/: arguments.py  callableobject.py  decorators.py  designpatters.py  functionalprogramming.py  hof.py
games/: bagles.py  dragonrealm.py  emojiloop.py  guessing.py  hangman.py  tictactoe.py
oop/: deckofcards1.py  deckofcards2.py  oop.py  vector2d_example.py  vector_example.py
