[tool.poetry]
name = "python3-bootcamp"
version = "0.1.0"
description = ""
authors = ["pedropmedina <pedrodelilia@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
requests = "^2.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
